# 5560-sps_genai_Assignment3_1

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: embeddings.py  inference.py  main.py  train_cnn.py
app/routers/: gan.py
artifacts/: generator.pt
gan/: models.py  train_gan.py
helper_lib/: data_loader.py  evaluator.py  model.py  trainer.py  utils.py
models/: cnn.pt
